Fix layout problems
removed body height = 100vh to prevent header and footer from being too
out of screen

changed padding of call-to-action to make it look better

--- a/style.css
+++ b/style.css
@@ -9,7 +9,6 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    height: 100vh;
 }
 
 body > * {
@@ -134,7 +133,7 @@ button {
     flex: 1;
     background-color: #e5e7eb;
     color: #1f2937;
-    padding: 48px 20%;
+    padding: 48px 15%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -154,14 +153,14 @@ button {
 }
 
 .call-to-action {
-    margin: 50px 12%;
+    margin: 100px 10%;
     display: flex;
     justify-content: space-between;
     align-items: center;
     border-radius: 15px;
     color: white;
-    /* gap: 10px; */
-    padding: 16px 96px;
+    gap: 10px;
+    padding : 16px 10%;
 }
 
 .call-to-action h4 {
